# Neat-neural-network

./: .gitignore  CMakeLists.txt  Champion_0_fit_0.txt  Champion_1008_fit_23346.txt  Champion_115_fit_28868.txt  Champion_117_fit_31629.txt  Champion_4522_fit_49199.txt  Champion_528_fit_46940.txt  Champion_5_fit_33386.txt  FUTUR_CHAMPION.txt  Main.cpp
src/: Graphical.cpp  Graphical.hpp
src/NeatNeuralNetwork/: Connection.cpp  Connection.hpp  Genome.cpp  Genome.hpp  NeatInfos.hpp  Node.cpp  Node.hpp  Specie.cpp  Specie.hpp
src/Snake/: Brain.cpp  Brain.hpp  Generation.cpp  Generation.hpp  Snake.cpp  Snake.hpp
src/SnakeAPI/: snakeAPI.cpp  snakeAPI.hpp
src/Thread Pool/: ThreadPool.hpp
src/ThreadPool/: ThreadPool.cpp  ThreadPool.hpp
